2013-07-05 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	* GRBezierPathEditor.h
	* GRBezierPathEditor.m
	* GRDocView.m
	* GRObjectEditor.h
	* GRObjectEditor.m
	* GRText.m
	* GRTextEditor.h
	* GRTextEditor.m
	Refactor and clean up case of isValid, isSelected, isDone

2013-07-05 Riccardo Mottola <rm@gnu.org>

	* GRObjectEditor.m
	When selecting for editing, mark the object as not done.

	* GRDocView.m
	Actually use the object found.

	* GRBezierPathEditor.m (selectForEditing)
	Just use superclass implementation.

	* GRObjectControlPoint.m
	Include proper header.

2013-06-28 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Correctly select paths in zommed mode, select bezier handles also if they lie inside a closed shape.

2013-06-28 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m (onPathBorder)
	Implement onPathBorder ontop of onControlPoint, expose onControlPoint separately.

2013-06-27 Riccardo Mottola <rm@gnu.org>

	* GRBezierPathEditor.m
        Fix handling control point handles in zoomed mode.

2013-06-27 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
        Draw the control point through its method, properly zoomed.

2013-06-27 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Permit path editing only on selected objects, do not unselect when clicking out of controls.

2013-06-24 Riccardo Mottola <rm@gnu.org>

	* GRText.m
        Rewrite string drawing, use drawInRect and disregard paragraph space.

2013-06-23 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	* GRBezierPath.m
	* GRBezierPathEditor.m
	* GRBox.h
	* GRBox.m
	* GRBoxEditor.m
	* GRCircle.h
	* GRCircle.m
	* GRCircleEditor.m
	* GRDocView.m
	* GRDrawableObject.h
	* GRDrawableObject.m
	* GRFunctions.h
	* GRFunctions.m
	* GRObjectControlPoint.m
	* GRText.m
	Keep the zoom factor as a separate property and keep the original size and position, independently of zoom

2013-06-16 Riccardo Mottola <rm@gnu.org>

	* GRBezierPathEditor.m
	* GRBezierControlPoint.m